--- a/Evolutions_of_Criminality_France_2016_2024.ipynb
+++ b/Evolutions_of_Criminality_France_2016_2024.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,7 +105,7 @@
         "id": "T2vp5ApjspyO",
         "outputId": "5d04ef89-da9e-4b23-fb3d-2fd05ccafe40"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +139,7 @@
         "id": "QyAwfLUosPZr",
         "outputId": "937e8106-584a-48cf-ae9a-a042f1864580"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -175,7 +174,7 @@
         "id": "LTmsEcQqs4h-",
         "outputId": "0b793f50-1e37-4b08-dbed-5c4699ecbd3f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -560,7 +559,7 @@
         "id": "zg00ay3Dtgtz",
         "outputId": "d03e3676-0bb9-44b2-a8a4-98bb468ddcd1"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -950,7 +949,7 @@
         "id": "H8T3eqT9uqCU",
         "outputId": "423e3188-cd48-468d-86c8-14f86d320742"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -995,7 +994,7 @@
         "id": "Yfe2sEidzerg",
         "outputId": "78f541fb-c041-433e-98dd-a78a0cc1fc33"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1008,6 +1007,24 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "test"
+      ],
+      "metadata": {
+        "id": "JOh1GrG2IhUr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "edo3eqQGH-yh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
