--- a/Evolutions_of_Criminality_France_2016_2024.ipynb
+++ b/Evolutions_of_Criminality_France_2016_2024.ipynb
@@ -67,9 +67,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dYT0c2z9sYH_",
-        "outputId": "389b88c3-2cce-4621-df00-7bdd031def9d"
+        "outputId": "0b3d9b5b-f825-42ec-cd02-ba15c7b4d324"
       },
-      "execution_count": 88,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,21 +105,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T2vp5ApjspyO",
-        "outputId": "60ca4d03-420c-4a72-e140-1469249ef87f"
+        "outputId": "3ed226b5-dfc4-4952-cc1a-155955ca59af"
       },
-      "execution_count": null,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'Intro-to-data-analysis-with-Python---Final-Project'...\n",
-            "remote: Enumerating objects: 77, done.\u001b[K\n",
-            "remote: Counting objects: 100% (77/77), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (72/72), done.\u001b[K\n",
-            "remote: Total 77 (delta 32), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (77/77), 453.62 KiB | 11.34 MiB/s, done.\n",
-            "Resolving deltas: 100% (32/32), done.\n"
+            "fatal: destination path 'Intro-to-data-analysis-with-Python---Final-Project' already exists and is not an empty directory.\n"
           ]
         }
       ]
@@ -139,9 +133,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QyAwfLUosPZr",
-        "outputId": "ee473503-8786-42b3-8ddd-6b8821524bb5"
+        "outputId": "6e2c5de1-5d97-40a2-b174-ea43b904a56c"
       },
-      "execution_count": null,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -156,7 +150,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 124
         }
       ]
     },
@@ -191,9 +185,9 @@
           "height": 1000
         },
         "id": "-OGv5EJO5US1",
-        "outputId": "d7d880f0-4950-4a59-a56b-fde4e3fdbfe9"
+        "outputId": "44d41061-541d-452e-d91b-0959c4987f06"
       },
-      "execution_count": 86,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -520,7 +514,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2d0664a3-6ecb-47db-9720-addb45f15c68\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3d760640-e82e-436a-bf4c-ce992ea2f3ce\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1161,7 +1155,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2d0664a3-6ecb-47db-9720-addb45f15c68')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3d760640-e82e-436a-bf4c-ce992ea2f3ce')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1213,12 +1207,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2d0664a3-6ecb-47db-9720-addb45f15c68 button.colab-df-convert');\n",
+              "        document.querySelector('#df-3d760640-e82e-436a-bf4c-ce992ea2f3ce button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2d0664a3-6ecb-47db-9720-addb45f15c68');\n",
+              "        const element = document.querySelector('#df-3d760640-e82e-436a-bf4c-ce992ea2f3ce');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1238,8 +1232,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-6a3858c1-e7c6-484d-8bca-da4b34e6c2b1\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6a3858c1-e7c6-484d-8bca-da4b34e6c2b1')\"\n",
+              "    <div id=\"df-16b62f88-9a39-409b-8237-06beb32c450b\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-16b62f88-9a39-409b-8237-06beb32c450b')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1358,7 +1352,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-6a3858c1-e7c6-484d-8bca-da4b34e6c2b1 button');\n",
+              "            document.querySelector('#df-16b62f88-9a39-409b-8237-06beb32c450b button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1375,7 +1369,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 86
+          "execution_count": 125
         }
       ]
     },
@@ -1393,9 +1387,9 @@
           "height": 456
         },
         "id": "ojcLTLi7LHin",
-        "outputId": "6b98bc9b-38dd-4145-967c-4e26378c6493"
+        "outputId": "143dad23-f231-4fed-d7db-814ea7dc010b"
       },
-      "execution_count": 113,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1524,7 +1518,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-18534ab9-0eb7-4578-8c0c-670730b6fa7a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f0da45ef-19d3-4dbb-84b7-61304171a6aa\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1769,7 +1763,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-18534ab9-0eb7-4578-8c0c-670730b6fa7a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f0da45ef-19d3-4dbb-84b7-61304171a6aa')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1821,12 +1815,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-18534ab9-0eb7-4578-8c0c-670730b6fa7a button.colab-df-convert');\n",
+              "        document.querySelector('#df-f0da45ef-19d3-4dbb-84b7-61304171a6aa button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-18534ab9-0eb7-4578-8c0c-670730b6fa7a');\n",
+              "        const element = document.querySelector('#df-f0da45ef-19d3-4dbb-84b7-61304171a6aa');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1846,8 +1840,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-6eaa6a73-9388-4ab9-b0bf-03a82316f560\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6eaa6a73-9388-4ab9-b0bf-03a82316f560')\"\n",
+              "    <div id=\"df-23b9dff4-185b-4967-b7c5-0958b409a0b2\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-23b9dff4-185b-4967-b7c5-0958b409a0b2')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1966,14 +1960,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-6eaa6a73-9388-4ab9-b0bf-03a82316f560 button');\n",
+              "            document.querySelector('#df-23b9dff4-185b-4967-b7c5-0958b409a0b2 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_144451c9-0a5c-4fb0-a1f5-ba72ac3ea693\">\n",
+              "  <div id=\"id_b5bcfe1f-9c9d-4119-b673-e151fd4ac370\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -2017,7 +2011,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_144451c9-0a5c-4fb0-a1f5-ba72ac3ea693 button.colab-df-generate');\n",
+              "        document.querySelector('#id_b5bcfe1f-9c9d-4119-b673-e151fd4ac370 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -2057,9 +2051,9 @@
           "height": 472
         },
         "id": "nkrvOgWESWsi",
-        "outputId": "65053a02-86ca-4d87-b077-88cfa059a5aa"
+        "outputId": "7fc30fcb-5803-40dc-ab39-656ac43d80c7"
       },
-      "execution_count": 116,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2079,20 +2073,19 @@
         "#Analyze the evolution of criminality with taking into account population growth:\n",
         "path = \"Intro-to-data-analysis-with-Python---Final-Project/Data/pop.xlsx\"\n",
         "\n",
-        "xls = pd.ExcelFile(path)\n",
-        "xls.sheet_names\n",
-        "\n",
-        "df_pop = pd.read_excel(pop.xlsx)"
+        "xls_pop = pd.ExcelFile(path)\n",
+        "xls_pop.sheet_names\n",
+        "\n"
       ],
       "metadata": {
         "id": "hnt_vB13WtKC",
-        "outputId": "65bbbb5a-7ad3-40e7-ce3f-46a59bc8939f",
+        "outputId": "684b0193-d1a9-4fd4-c6d2-feecd7da30df",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 380
+          "height": 397
         }
       },
-      "execution_count": 118,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "error",
@@ -2101,7 +2094,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-2400608461.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Intro-to-data-analysis-with-Python---Final-Project/Data/pop.xlsx\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mxls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mExcelFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mxls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msheet_names\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-4257430132.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Intro-to-data-analysis-with-Python---Final-Project/Data/pop.xlsx\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mxls_pop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mExcelFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mxls_pop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msheet_names\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/excel/_base.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, path_or_buffer, engine, storage_options, engine_kwargs)\u001b[0m\n\u001b[1;32m   1548\u001b[0m                 \u001b[0mext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"xls\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1549\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1550\u001b[0;31m                 ext = inspect_excel_format(\n\u001b[0m\u001b[1;32m   1551\u001b[0m                     \u001b[0mcontent_or_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstorage_options\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstorage_options\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1552\u001b[0m                 )\n",
             "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/excel/_base.py\u001b[0m in \u001b[0;36minspect_excel_format\u001b[0;34m(content_or_path, storage_options)\u001b[0m\n\u001b[1;32m   1400\u001b[0m         \u001b[0mcontent_or_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBytesIO\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontent_or_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1401\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1402\u001b[0;31m     with get_handle(\n\u001b[0m\u001b[1;32m   1403\u001b[0m         \u001b[0mcontent_or_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstorage_options\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstorage_options\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mis_text\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1404\u001b[0m     ) as handle:\n",
             "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/common.py\u001b[0m in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    880\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    881\u001b[0m             \u001b[0;31m# Binary mode\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 882\u001b[0;31m             \u001b[0mhandle\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    883\u001b[0m         \u001b[0mhandles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    884\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
