--- a/Evolutions_of_Criminality_France_2016_2024.ipynb
+++ b/Evolutions_of_Criminality_France_2016_2024.ipynb
@@ -131,6 +131,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Part 1: Has criminality been on a rise in the past years?**"
+      ],
+      "metadata": {
+        "id": "gY-Db3FgKBbl"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Read Excel File - total accused people and display the sheets' names\n",
@@ -3365,12 +3374,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "xnORvJwsBDOq",
-        "outputId": "f869de9a-1a83-4af2-f1c7-8436a054d966",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "id": "xnORvJwsBDOq",
+        "outputId": "f869de9a-1a83-4af2-f1c7-8436a054d966"
       },
       "execution_count": 52,
       "outputs": [
@@ -3396,12 +3405,12 @@
         "df_merged_sv_renamed.head(10)"
       ],
       "metadata": {
-        "id": "DW7LYdybCaRp",
-        "outputId": "942889e7-62ba-4c60-ce84-2221cc5bacdb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 331
-        }
+        },
+        "id": "DW7LYdybCaRp",
+        "outputId": "942889e7-62ba-4c60-ce84-2221cc5bacdb"
       },
       "execution_count": 54,
       "outputs": [
@@ -3738,12 +3747,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "vTMlYtk2CEGE",
-        "outputId": "d697be2d-3e8e-44f3-80d2-0161b3b92ff3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "id": "vTMlYtk2CEGE",
+        "outputId": "d697be2d-3e8e-44f3-80d2-0161b3b92ff3"
       },
       "execution_count": 55,
       "outputs": [
@@ -3758,6 +3767,41 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Part 2: What variables are most closely linked to committing a crime?**"
+      ],
+      "metadata": {
+        "id": "73fvVonxJpLc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Plot barplots for different crime on the sex variable to see the criminality rate by sex,\n",
+        "# and then analyze for exemple which crimes women are the most likely to commit\n",
+        "\n",
+        "df_period = pivoted_df[(pivoted_df['Année'] >= 2016) & (pivoted_df['Année'] <= 2024)]\n",
+        "df_period_merged = pd.merge(df_period, df_pop_années_ensemble, on=\"Année\")\n",
+        "df_period_merged_renamed = df_period_merged.rename(columns={\"Ensemble\": \"Population\"})\n",
+        "\n",
+        "rates = (\n",
+        "    df_period_merged_renamed\n",
+        "    .groupby('Sexe')[['Violences sexuelles', 'Population']]\n",
+        "    .sum()\n",
+        ")\n",
+        "\n",
+        "rates['rate_per_100k'] = rates['Violences sexuelles'] / rates['Population'] * 100_000\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "1-dZp9RCKM2p"
+      },
+      "execution_count": 57,
+      "outputs": []
     },
     {
       "cell_type": "code",
