--- a/Notebook 1 - Part 1.ipynb
+++ b/Notebook 1 - Part 1.ipynb
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/luciedum-dot/Intro-to-data-analysis-with-Python---Final-Project/blob/main/Notebook%201%20-%20Part%201%20%3A%20Has%20criminality%20increased%3F.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/luciedum-dot/Intro-to-data-analysis-with-Python---Final-Project/blob/main/Notebook%201%20-%20Part%201.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "id": "6-yJP8_PpXNy"
       },
@@ -48,7 +48,7 @@
         },
         "outputId": "6f985fc7-008d-4825-e694-186150d81791"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "id": "dYT0c2z9sYH_",
         "outputId": "04bdd65f-1232-4134-b407-a718561b0496"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
         "id": "T2vp5ApjspyO",
         "outputId": "b47fdc60-4dc3-4ccc-bde8-08a44ca31023"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +178,7 @@
         "id": "QyAwfLUosPZr",
         "outputId": "5a92b9aa-5cde-4c0c-8ad6-2124fd0f0508"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +230,7 @@
         "id": "-OGv5EJO5US1",
         "outputId": "c84321b2-278e-44be-e898-d7ab86630fd9"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1441,7 +1441,7 @@
         "id": "JJ5GWdXpobbr",
         "outputId": "88ce75d7-6f4f-46bc-c33c-10638fd66cc0"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2155,7 +2155,7 @@
         "id": "tNdffG8cWULH",
         "outputId": "e7ac4f25-3621-4e95-8056-bc2cf6ebb5ca"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2201,7 +2201,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2239,7 +2239,7 @@
           "height": 362
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2593,7 +2593,7 @@
           "height": 331
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2997,7 +2997,7 @@
           "height": 472
         }
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3068,7 +3068,7 @@
           "height": 464
         }
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3114,7 +3114,7 @@
         "id": "YO5qYupm_eul",
         "outputId": "77ee37b9-e079-4f38-fcf2-1751aa77c3cb"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3149,7 +3149,7 @@
         "id": "nkrvOgWESWsi",
         "outputId": "3d36f26c-bc38-44f7-db12-274311e4a48d"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3190,7 +3190,7 @@
         "id": "Gqvh1n2CrJJk",
         "outputId": "91ea3954-d85f-45fd-8901-9325b99521bc"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3571,7 +3571,7 @@
         "id": "ksdUJJe6rX3h",
         "outputId": "9924204d-69fb-4d70-d114-29559e16752a"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3615,7 +3615,7 @@
         "id": "Xs6WIrj65PJG",
         "outputId": "d9ce85c6-c885-4808-ccbe-8a001db9f066"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3656,7 +3656,7 @@
         "id": "xnORvJwsBDOq",
         "outputId": "38e47fdb-4ffe-4021-9424-2749f0f612af"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3687,7 +3687,7 @@
         "id": "DW7LYdybCaRp",
         "outputId": "fbc4b1d8-11d3-4de4-ae9e-f7afe2acf166"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4029,7 +4029,7 @@
         "id": "vTMlYtk2CEGE",
         "outputId": "255cc2f6-4773-4950-f49d-b6867f37cf0d"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4070,7 +4070,7 @@
         "id": "fbdPbdRAcB3D",
         "outputId": "ccb3cac5-5dcc-4c3f-842a-d5e62edabfba"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4101,7 +4101,7 @@
         "id": "Xsw7Vrlzc6eK",
         "outputId": "3e02e1df-5c68-46c0-e06a-8e6dae49ab5e"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4429,7 +4429,7 @@
         "#Calculate the domestic physical violence rate and plot it. The population number has been multiplied by 1000 as it was displayed in thousands people in the excelfile and the dataframes before\n",
         "df_dpv_rate = df_merged_dpv_renamed['Violences physiques dans le cadre intra-familial'] / (df_merged_dpv_renamed['Population']*1000) * 100_000\n",
         "plt.plot(df_merged_dpv_renamed['Année'], df_dpv_rate, marker='o')\n",
-        "plt.title(\"MEC for omestic physical violence rate per 100,000 inhabitants (2016–2024)\")\n",
+        "plt.title(\"MEC for domestic physical violence rate per 100,000 inhabitants (2016–2024)\")\n",
         "plt.xlabel(\"Year\")\n",
         "plt.ylabel(\"MEC for domestic physical violence rate\")\n",
         "plt.grid(True)\n",
@@ -4443,7 +4443,7 @@
         "id": "o0HD4G70eO16",
         "outputId": "1696a18e-273c-48a1-fb69-7b849b449c82"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4484,7 +4484,7 @@
         "id": "VWrB0aGve-CV",
         "outputId": "e015a091-bde6-4a08-f24b-26274e9599ca"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4515,7 +4515,7 @@
         "id": "84OcBo7cgCVk",
         "outputId": "478193b0-c150-40b5-ad3e-b4e2821c2fcf"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4857,7 +4857,7 @@
         "id": "UMe7zpGmgaE4",
         "outputId": "3c1a1512-03e4-44cf-a555-bbc22eaf0708"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4898,7 +4898,7 @@
         "id": "cmg-FvKXr9_d",
         "outputId": "26d76f4a-9cdc-4e22-ed3c-b98fc932014b"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4930,7 +4930,7 @@
         "id": "dMiY_BKosQZS",
         "outputId": "e3245f6b-a009-4a51-9d95-cfb22c881a36"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5272,7 +5272,7 @@
         "id": "YlzkIvQisewB",
         "outputId": "5bb7e82f-df9b-43ff-80ed-1f8b6b0d9a79"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5313,7 +5313,7 @@
         "id": "E534RYRPs5A_",
         "outputId": "9c1957a3-6e4d-4ef6-e0e6-d5893bbd77e5"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5344,7 +5344,7 @@
         "id": "aDQDjA2UtKci",
         "outputId": "dee90ef0-8315-4ef8-b30e-915d9dcd873c"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5686,7 +5686,7 @@
           "height": 472
         }
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
